--- a/project/project.html
+++ b/project/project.html
@@ -150,11 +150,12 @@
                 <div class="mapouter"><div class="gmap_canvas"><iframe width="239" height="197" id="gmap_canvas" src="https://maps.google.com/maps?q=california&t=&z=10&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://2yu.co">2yu</a><br><style>.mapouter{position:relative;text-align:right;height:197px;width:239px;}</style><a href="https://embedgooglemap.2yu.co">html embed google map</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:197px;width:239px;}</style></div></div>
             </div>
         </div>            
-        <p class="copyright">Trang web được code bởi baophmm &copy; 2023, được tham khảo từ các trang web MSI, TGDD, GEARVN, TNC,...</p>
+        <p class="copyright">Trang web được code bởi baophm03 &copy; 2023, được tham khảo từ các trang web MSI, TGDD, GEARVN, TNC,...</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <script src="https://cdn.jsdelivr.net/gh/flesler/jquery.scrollTo/jquery.scrollTo.min.js"></script>
     <script src="cuonsmooth.js"></script>
 </body>
+
 </html>
